A load closer
Signed-off-by: jasperpotts <jasperpotts@users.noreply.github.com>